@@ -10,7 +10,7 @@ import org.eclipse.text.edits.TextEdit;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 
 /**
@@ -1166,7 +1166,7 @@ public class EclipseJDTRefactoring {
      * Read file contents.
      */
     private String readFile(String filePath) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(filePath)));
+        return new String(Files.readAllBytes(Path.of(filePath)));
     }
 
     /**
